fix overflow: hidden

--- a/GoFrontend/Tech Skills/HTML Модуль 7-8/css/style.css
+++ b/GoFrontend/Tech Skills/HTML Модуль 7-8/css/style.css
@@ -23,7 +23,7 @@ body,
 .main-wrapper {
     min-width: 320px;
     overflow-x: hidden;
-    overflow: hidden;
+    /*overflow: hidden;*/
     margin: 0 auto;
 }
 .header-bg {
